# synth

./: CMakeLists.txt  main.cpp  run.sh
src/: buffer.cpp  buffer.h  constants.h  pcm.cpp  pcm.h  saw.h  sine.h  synth.h
